# llm-eval-llm-judge

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
llm_eval/: cli.py  config.py
llm_eval/evaluate/: task_pipeline.py
llm_eval/llm/: client.py  providers.py
llm_eval/tasks/: __init__.py  base.py  gsm8k.py
